event row align fix

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -593,6 +593,7 @@ a {
   }
 
   .event-row {
+    align-items: baseline !important;
     flex-direction: column !important;
   }
 
